--- a/index.html
+++ b/index.html
@@ -5,11 +5,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Creative Card Shoes</title>
 </head>
 
 <body>
-    <div></div>
+    <div>
+        <div class="container">
+            <div class="card">
+                <div class="imgBx">
+                    <img src="/image/1.svg" alt="red shoe ">
+                </div>
+                <div class="contentBx">
+                    <h2>New Shoes</h2>
+                    <div class="size">
+                        <h3>Size:</h3>
+                        <span>7</span>
+                        <span>8</span>
+                        <span>9</span>
+                        <span>10</span>
+                    </div>
+
+                    <div class="link">
+                        <a href="#">Buy Now</a>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="card-green">
+                <div class="imgBx">
+                    <img src="/image/2.svg" alt="red shoe ">
+                </div>
+                <div class="contentBx">
+                    <h2>New Shoes</h2>
+                    <div class="size">
+                        <h3>Size:</h3>
+                        <span>7</span>
+                        <span>8</span>
+                        <span>9</span>
+                        <span>10</span>
+                    </div>
+
+                    <div class="link">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
