--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <div>
+        <h1>
+            New Collection
+        </h1>
         <div class="container">
             <div class="card">
                 <div class="imgBx">
@@ -31,6 +34,25 @@
                     </div>
 
 
+                </div>
+            </div>
+            <div class="card-green">
+                <div class="imgBx">
+                    <img src="/image/2.svg" alt="red shoe ">
+                </div>
+                <div class="contentBx">
+                    <h2>New Shoes</h2>
+                    <div class="size">
+                        <h3>Size:</h3>
+                        <span>7</span>
+                        <span>8</span>
+                        <span>9</span>
+                        <span>10</span>
+                    </div>
+
+                    <div class="link">
+                        <a href="#">Buy Now</a>
+                    </div>
                 </div>
             </div>
             <div class="card-green">
