--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="card">
                 <div class="imgBx">
-                    <img src="/image/1.svg" alt="red shoe ">
+                    <img src="/image/readShoe.svg" alt="red shoe ">
                 </div>
                 <div class="contentBx">
                     <h2>New Shoes</h2>
@@ -38,7 +38,7 @@
             </div>
             <div class="card-green">
                 <div class="imgBx">
-                    <img src="/image/2.svg" alt="red shoe ">
+                    <img src="/image/greenShoe.svg" alt="red shoe ">
                 </div>
                 <div class="contentBx">
                     <h2>New Shoes</h2>
@@ -55,9 +55,9 @@
                     </div>
                 </div>
             </div>
-            <div class="card-green">
+            <div class="card-blue">
                 <div class="imgBx">
-                    <img src="/image/2.svg" alt="red shoe ">
+                    <img src="/image/blueShoe.svg" alt="red shoe ">
                 </div>
                 <div class="contentBx">
                     <h2>New Shoes</h2>
