--- a/cardShoes/index.html
+++ b/cardShoes/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/cardShoes/style.css">
     <title>Creative Card Shoes</title>
 </head>
 
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="card">
                 <div class="imgBx">
-                    <img src="/image/readShoe.svg" alt="red shoe ">
+                    <img src="/cardShoes/image/readShoe.svg" alt="red shoe ">
                 </div>
                 <div class="contentBx">
                     <h2>New Shoes</h2>
@@ -38,7 +38,7 @@
             </div>
             <div class="card-green">
                 <div class="imgBx">
-                    <img src="/image/greenShoe.svg" alt="red shoe ">
+                    <img src="/cardShoes/image/greenShoe.svg" alt="green shoe ">
                 </div>
                 <div class="contentBx">
                     <h2>New Shoes</h2>
@@ -57,7 +57,7 @@
             </div>
             <div class="card-blue">
                 <div class="imgBx">
-                    <img src="/image/blueShoe.svg" alt="red shoe ">
+                    <img src="/cardShoes/image/blueShoe.svg" alt="blue shoe ">
                 </div>
                 <div class="contentBx">
                     <h2>New Shoes</h2>
