--- a/cardShoes/index.html
+++ b/cardShoes/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/cardShoes/style.css">
+    <link rel="stylesheet" href="/styleGlobal.css">
     <title>Creative Card Shoes</title>
 </head>
 
@@ -76,6 +77,8 @@
             </div>
         </div>
     </div>
+
+
 </body>
 
 </html>
