--- a/index.html
+++ b/index.html
@@ -5,11 +5,150 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styleGlobal.css">
+    <link rel="stylesheet" href="styleShoes.css">
+    <link rel="stylesheet" href="styleBooks.css">
     <title>Creative Cards</title>
 </head>
 
 <body>
-    <a href="/cardBooks/index.html" target="_blank" rel="noopener noreferrer">Link Card Books</a>
+    <div class="carousel">
+        <div class="carouselItem buttonSelected">
+            <div>
+                <h1 class="titleShoes">
+                    New Collection
+                </h1>
+                <div class="container">
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="/readShoe.svg" alt="red shoe ">
+                        </div>
+                        <div class="contentBx">
+                            <h2>New Shoes</h2>
+                            <div class="size">
+                                <h3>Size:</h3>
+                                <span>7</span>
+                                <span>8</span>
+                                <span>9</span>
+                                <span>10</span>
+                            </div>
+
+                            <div class="link">
+                                <a href="#">Buy Now</a>
+                            </div>
+
+
+                        </div>
+                    </div>
+                    <div class="card-green">
+                        <div class="imgBx">
+                            <img src="/greenShoe.svg" alt="green shoe ">
+                        </div>
+                        <div class="contentBx">
+                            <h2>New Shoes</h2>
+                            <div class="size">
+                                <h3>Size:</h3>
+                                <span>7</span>
+                                <span>8</span>
+                                <span>9</span>
+                                <span>10</span>
+                            </div>
+
+                            <div class="link">
+                                <a href="#">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-blue">
+                        <div class="imgBx">
+                            <img src="/blueShoe.svg" alt="blue shoe ">
+                        </div>
+                        <div class="contentBx">
+
+                            <div class="size">
+                                <h2>New Shoes</h2>
+                                <h3>Size:</h3>
+                                <span>7</span>
+                                <span>8</span>
+                                <span>9</span>
+                                <span>10</span>
+                            </div>
+
+                            <div class="link">
+                                <a href="#">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carouselItem">
+
+            <h1 class="titleBook">New Books</h1>
+            <div class="container"> <!-- centralizar -->
+                <div class="box">
+                    <div class="bookBanner">
+
+                        <div class="text">
+                            <h1>Das Licht in uns</h1>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus est in pariatur? Nisi
+                                totam
+                                fugit architecto expedita reprehenderit labore neque iure hic! Ipsum animi fuga ratione
+                                aut
+                                reprehenderit labore neque iure hic! Ipsum animi fuga ratione autoptio laboriosam
+                                maiores?
+                            </p>
+                            <button>Kaufen</button>
+                        </div>
+
+                    </div>
+                    <img src="/michelleObama.svg" alt="Das Licht in uns, Michelle Obama">
+
+                </div>
+
+                <div class="box">
+                    <div class="bookBanner">
+                        <div class="text">
+                            <h1>Das Kind in dir muss Heimat Finden</h1>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus est in pariatur? Nisi
+                                totam
+                                fugit architecto expedita reprehenderit labore neque iure hic! Ipsum animi fuga ratione
+                                aut
+                                reprehenderit labore neque iure hic! Ipsum animi fuga ratione autoptio laboriosam
+                                maiores?
+                            </p>
+                            <button>Kaufen</button>
+                        </div>
+                    </div>
+                    <img src="/stefanieStahl.svg" alt="">
+                </div>
+
+                <div class="box">
+                    <div class="bookBanner">
+                        <div class="text">
+                            <h1>Was für immer mir gehört</h1>
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus est in pariatur? Nisi
+                                totam
+                                fugit architecto expedita reprehenderit labore neque iure hic! Ipsum animi fuga ratione
+                                aut
+                                reprehenderit labore neque iure hic! Ipsum animi fuga ratione autoptio laboriosam
+                                maiores?
+                            </p>
+                            <button>Kaufen</button>
+                        </div>
+                    </div>
+                    <img src="/mayaAngelou.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="carouselItem"> Surprise</div>
+
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
